--- a/styles.css
+++ b/styles.css
@@ -189,3 +189,29 @@ form button:hover {
   margin-top: 10px;
   font-size: 18px;
 }
+#image-banner {
+  width: 100%;
+  text-align: center;
+  margin: 20px 0;
+}
+
+.banner-image {
+  width: 60%;
+  height: auto;
+}
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin: 10px 0;
+}
+
+th,
+td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
+
+th {
+  background-color: #f2f2f2;
+}
